--- a/client/app/game/main_loop.html
+++ b/client/app/game/main_loop.html
@@ -15,7 +15,7 @@
 
 
 
-<div ng-hide="game.phase=='warn'" id = "box-wrap-inner">
+<div id = "box-wrap-inner">
 
     <div  class="relative scenario-card text-left" ng-repeat="mainCard in game.main track by $index"
           ng-class="{invisible: mainCard.hidden, chosen: mainCard.chosen, dim:game.phase=='scoring'}" ng-hide="dealer.prologue == true">
@@ -41,21 +41,6 @@
         </div>
       </div>
     </div>
-</div>
-<div ng-show="game.phase=='warn'" id = "box-wrap-inner">
-  <div  class="relative scenario-card text-left">
-    <div class="scenarioWrap">
-      <div class="mainBar {{game.warning.team}}"> <h3 class="  {{game.warning.team}}" ng-bind-html="game.warning.action"></h3></div>
-
-      <div class="row main-row">
-        <div class="col-md-3 scenario-icon" ggc-icon fill="true"
-             icon-id="{{game.warning.icon._id}}"></div>
-        <div class="col-md-9">
-          <div ng-bind-html="game.warning.mainText"></div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 
 
