make playerpanels a ui-view

--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -6,10 +6,11 @@
 
   <!--TODO(Ryan):  Tell Ray why?-->
 
-  <div ui-view="plane"></div>
-  <div id="ui-main" ui-view="main"></div>
-  <div ui-view="vid" id="ui-vid"></div>
-  <div ui-view="scrim"></div>
+  <div  ui-view="plane"></div>
+  <div  id = "ui-panels" ui-view="panels"></div>
+  <div  id="ui-main" ui-view="main"></div>
+  <div  ui-view="vid" id="ui-vid"></div>
+  <div  ui-view="scrim"></div>
   <!--<img  class = "debugOverlay" src="../../bmp/borderandscrim_1200_buttons.png" />-->
 
 </div>
