--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -2,8 +2,7 @@
 <div class="arrow environment"></div>
 <div class="arrow economy"></div>
 <div class="arrow energy"></div>
-<!--TODO(Ray) use player.panelClass instead of all this jazz /* use {name} to call game.players */ -->
-<div class="panelOuter {{name}}" ng-class="game.players[name].panelClass">
+<div class="panelOuter {{name}}" ng-class="player.panelClass">
   <div class="panelInner{{name}}" > <!--ng-class={true: 'extended', false: 'none'}[player.isCurrentPlayer == false]-->
     <div class="topPlane"></div>
 
