Added ggcSounds service, moved all .wav refs to ggcSounds

--- a/client/index.html
+++ b/client/index.html
@@ -158,6 +158,7 @@
           <script src="app/ggcPrologueOverlord/ggcPrologueOverlord.service.js"></script>
           <script src="app/ggcPrologueVid/ggcPrologueVid.directive.js"></script>
           <script src="app/ggcScore/ggcScore.directive.js"></script>
+          <script src="app/ggcSounds/ggcSounds.service.js"></script>
           <script src="app/ggcSvgFilters/ggcSvgFilters.directive.js"></script>
           <script src="app/ggcThree/ggcThree.directive.js"></script>
           <script src="app/ggcThreeScene/ggcThreeScene.service.js"></script>
