--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -51,7 +51,8 @@
       <div ng-show="game.phase == 'scoring' || game.phase == 'eventScoring' || game.phase == 'warn'" class="vote-buttons">
         <div  ng-show = "player.hand.issue.passed">
           <!--TODO() Make this a directive so we can change it in event Scoring-->
-          <h3 class = "tab-title text-center">Action Passed</h3>
+          <h3 ng-show = "game.phase == 'scoring'" class = "tab-title text-center">Action Passed</h3>
+          <h3 ng-hide = "game.phase == 'scoring'" class = "tab-title text-center">{{game.warning.action}}</h3>
           <h1 class="text-center score {{name}}" ng-bind-html="player.hand.issue.scoreHTML"></h1>
           <div class="tab-body text-center">
             <span ng-show="(+player.hand.issue.score > 0)">Your sector improved.</span>
