--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -7,7 +7,11 @@
     <div class="topPlane"></div>
 
     <div class="bottomPlane">
-      <div class="colorbar"><h3>{{name | capitalize}}</h3></div>
+      <div class = "bar-wrap">
+         <div class="colorbar"  ng-hide="player.hint.visible"><h3>{{name | capitalize}}</h3></div>
+        <div class="colorbar hint-wrap" ng-hide="!player.hint.visible"><h3 class="hint">{{player.hint.text}}</h3></div>
+      </div>
+
 
       <div ng-show="game.phase == 'choice'">
         <div ng-show = "player.isCurrentPlayer">
