basic hint service

--- a/client/index.html
+++ b/client/index.html
@@ -153,6 +153,7 @@
           <script src="app/ggcDeck/ggcDeck.service.js"></script>
           <script src="app/ggcGame/ggcGame.service.js"></script>
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
+          <script src="app/ggcHints/ggcHints.service.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
           <script src="app/ggcPrologueOverlord/ggcPrologueOverlord.service.js"></script>
