--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -9,6 +9,7 @@
   <div  ui-view="plane"></div>
 
   <div  id="ui-main" ui-view="main"></div>
+  <div  ui-view="tutorial" id="ui-tutorial"></div>
   <div  ui-view="vid" id="ui-vid"></div>
   <div  id = "ui-panels" ui-view="panels"></div>
   <div  ui-view="scrim"></div>
