--- a/client/index.html
+++ b/client/index.html
@@ -175,6 +175,7 @@
           <script src="app/sandbox/sandbox.controller.js"></script>
           <script src="app/sandbox/sandbox.js"></script>
           <script src="app/scoreBoard/scoreBoard.directive.js"></script>
+          <script src="app/tutorial/tutorial.controller.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
