added flip mixins

--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -9,7 +9,7 @@
     <div class="bottomPlane">
       <div class = "bar-wrap">
          <div class="colorbar"  ng-hide="player.hint.visible"><h3>{{name | capitalize}}</h3></div>
-        <div class="colorbar hint-wrap" ng-hide="!player.hint.visible"><h3 class="hint">{{player.hint.text}}</h3></div>
+        <div class="colorbar hint-wrap" ng-show="player.hint.visible"><h3 class="hint">{{player.hint.text || 'Foooo'}}</h3></div>
       </div>
 
 <!---->
