--- a/client/index.html
+++ b/client/index.html
@@ -152,6 +152,7 @@
           <script src="app/ggcAttractVid/ggcAttractVid.directive.js"></script>
           <script src="app/ggcDeck/ggcDeck.service.js"></script>
           <script src="app/ggcGame/ggcGame.service.js"></script>
+          <script src="app/ggcGovernor/ggcGovernor.service.js"></script>
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcHints/ggcHints.service.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
