--- a/client/app/game/attractPanels.html
+++ b/client/app/game/attractPanels.html
@@ -12,15 +12,17 @@
         <div class="topPlane"></div>
 
         <div class="bottomPlane">
-          <div class="colorbar"><h3>{{name | capitalize}}</h3></div>
+          <div class="bar-wrap">
+            <div class="colorbar"><h3>{{name | capitalize}}</h3></div>
+          </div>
 
 
-          <div class="ggc-btn-wrap">
-            <div class="col-md-6">
-              <h2 style="color:white; text-align: center; margin-top:-50px;">Touch<br>to<br>Start</h2>
+          <div class="ggc-btn-wrap closed">
+            <div class="col-md-6 text-center">
+              <h2 style="color:white">Touch<br>to<br>Start</h2>
             </div>
             <div class="col-md-6">
-              <div class="ggc-btn">
+              <div class="ggc-btn attract">
                 <a class="btn-icon pass {{name}} attract"> Start </a>
               </div>
             </div>
