--- a/client/app/game/prologuePanels.html
+++ b/client/app/game/prologuePanels.html
@@ -9,15 +9,17 @@
         <div class="topPlane"></div>
 
         <div class="bottomPlane">
-          <div class="colorbar"><h3>{{name | capitalize}}</h3></div>
+          <div class="bar-wrap">
+            <div class="colorbar"><h3>{{name | capitalize}}</h3></div>
+          </div>
 
 
-          <div class="ggc-btn-wrap">
-            <div class="col-md-6">
-              <h2 style="color:white; text-align: center; margin-top:-50px;">Touch<br>to<br>Skip</h2>
+          <div class="ggc-btn-wrap closed">
+            <div class="col-md-6 text-center">
+              <h2 style="color:white">Touch<br>to<br>Skip</h2>
             </div>
             <div class="col-md-6">
-              <div class="ggc-btn">
+              <div class="ggc-btn attract">
                 <a class="btn-icon pass {{name}} attract"> Skip </a>
               </div>
             </div>
