--- a/client/app/game/attractPanels.html
+++ b/client/app/game/attractPanels.html
@@ -18,7 +18,7 @@
 
           <div class="ggc-btn-wrap closed">
             <div class="col-md-6 text-center">
-              <h2 style=1"color:white;">Touch<br>to<br>Start</h2>
+              <h2 style="color:white;">Touch<br>to<br>Start</h2>
             </div>
             <div class="col-md-6">
               <div class="ggc-btn">
