--- a/client/app/game/tutorial.html
+++ b/client/app/game/tutorial.html
@@ -10,17 +10,17 @@
   </h1-->
 </div>
 
-<div class="container"> <!-- Center ng-show="frames[2].active" -->
+<div class="full-width"> <!-- Center -->
 
-  <div class = "row">
-    <div class="colorbar col-md-10 T1" ng-show="frames[2].active"><h1>Each Player represents a sector.</h1></div>
-    <div class="colorbar col-md-10 T2" ng-show="frames[8].active"><h1>On your turn, choose an action</br>to benefit your sector.</h1></div>
+  <div class = "relative above-cards">
+    <div class="tutorialText T1" ng-if="frames[2].active"><h1 class="text-center">Each Player represents a sector.</h1></div>
   </div>
 
-  <div class = "row"> <!-- Bottom Center -->
-    <div class="colorbar col-md-10 T3" ng-show="frames[16].active"><h1>Everyone votes.</br>The majority decides.</h1></div>
-    <div class="colorbar col-md-10 T4" ng-show="frames[22].active"><h1>Environment, Economy and Energy</br>must cooperate and restore balance.</h1></div>
-    <div class="colorbar col-md-10 T5" ng-show="frames[26].active"><h1>Get ready to play!</h1></div>
+  <div class = "relative below-cards"> <!-- Bottom Center -->
+    <div class="tutorialText text-center T2" ng-if="frames[8].active"><h1>On your turn, choose an action</br>to benefit your sector.</h1></div>
+    <div class="tutorialText text-center T3" ng-if="frames[16].active"><h1>Everyone votes.</br>The majority decides.</h1></div>
+    <div class="tutorialText text-center T4" ng-if="frames[22].active"><h1>Environment, Economy and Energy</br>must cooperate and restore balance.</h1></div>
+    <div class="tutorialText text-center T5"  ng-if="frames[26].active"><h1 class="text-center">Get ready to play!</h1></div>
   </div>
 
 </div>
