--- a/client/app/game/tutorial.html
+++ b/client/app/game/tutorial.html
@@ -2,7 +2,7 @@
 
 
 <div class="row relative text-center main-title" >
-  <h1  class = "title" ng-show="game.phase == 'choice'">
+  <h1  class = "title" style="font-size:6em; margin-left:5px;">
      How to Play
   </h1>
   <!--h1  class = "title">
@@ -10,7 +10,7 @@
   </h1-->
 </div>
 
-<div class="full-width"> <!-- Center -->
+<div class="full-width rel"> <!-- Center -->
 
   <div class = "relative above-cards">
     <div class="tutorialText T1" ng-if="frames[2].active"><h1 class="text-center">Each Player represents a sector.</h1></div>
