--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
-  <body ng-app="ggcApp"  class="{{body-transform}}" ng-keyup="globalShortcuts($event)" ng-controller="AppCtrl" ng-class = "{'gameBody':config.gameMode, 'transform':config.resize}">
+  <body  class="{{body-transform}}" ng-keyup="globalShortcuts($event)" ng-controller="AppCtrl" ng-class = "{'gameBody':config.gameMode, 'transform':config.resize}">
 
 
     <!--[if lt IE 7]>
@@ -69,6 +69,7 @@
     <script src="lib/popcorn-custom.js"></script>
     <script src="lib/ckeditor.js"></script>
 
+
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
@@ -77,6 +78,7 @@
       <!-- bower:js -->
       <script src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/angular/angular.js"></script>
+    <script src="lib/angular-bootstrap.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-ui-bootstrap-bower/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/underscore/underscore.js"></script>
