--- a/client/app/game/attractPanels.html
+++ b/client/app/game/attractPanels.html
@@ -6,7 +6,7 @@
   <div class="playerPanel {{name}}">
 
 
-    <div class="panelOuter {{name}}" ng-class="game.players[name].panelClass">
+    <div class="panelOuter {{name}}" ng-class="pregameClass(game.players[name].panelClass)">
       <div class="panelInner{{name}}">
         <!--ng-class={true: 'extended', false: 'none'}[player.isCurrentPlayer == false]-->
         <div class="topPlane"></div>
