--- a/client/index.html
+++ b/client/index.html
@@ -124,7 +124,7 @@
       <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/d3/d3.js"></script>
-      <script src="bower_components/threejs/build/three.js"></script>
+      <!--script src="bower_components/threejs/build/three.js"></script-->
       <script src="bower_components/angular-audio/app/angular.audio.js"></script>
       <script src="bower_components/angular-ui-router.stateHelper/statehelper.js"></script>
       <!-- endbower -->
