simplify attract vid

--- a/client/app/game/attract.html
+++ b/client/app/game/attract.html
@@ -2,7 +2,7 @@
 
 <div id="box-wrap-inner">
 
-  <video ggc-attract-vid id="#prologue"  class = "ggc-video-prologue">
+  <video ggc-attract-vid id="#prologue"  class = "ggc-video-prologue" autoplay loop>
     <source  ng-src="{{getVideoURL('intro_anim.webm')}}" type="video/webm"></source>
   </video>
 
